--- a/bob/client/package.json
+++ b/bob/client/package.json
@@ -10,10 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@wavesurfer/react": "^1.0.11",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "wavesurfer.js": "^7.11.1"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
